yml/network/httpd.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: httpd
  namespace: default
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - name: httpd
          image: httpd:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
  namespace: default
spec:
  type: NodePort
  selector:
      run: httpd
  ports:
  - protocol: TCP
    nodePort: 30000
    port: 8080
    targetPort: 80
