yml/network/policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-httpd
spec:
  podSelector:
    matchLabels:
      run: httpd
  ingress:
    - from:
      - podSelector:
          matchLabels:
            access: "true"
    ports:
      - protocol: TCP
        port: 80
